--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>THE GREAT IMPOSTER</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
@@ -24,29 +24,59 @@
             },
             animation: {
               'pulse-fast': 'pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+            },
+            screens: {
+              'short': { 'raw': '(max-height: 700px)' },
+              'tall': { 'raw': '(min-height: 800px)' },
+              'landscape': { 'raw': '(orientation: landscape)' },
+              'portrait': { 'raw': '(orientation: portrait)' },
             }
           }
         }
       }
     </script>
     <style>
-      body {
+      :root {
+        /* Fallback for browsers that don't support dvh */
+        --vh: 100vh;
+      }
+      
+      body, html {
         margin: 0;
-        overflow-x: hidden;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        height: 100dvh; /* Dynamic viewport height */
+        overflow: hidden; /* Prevent body scroll, handle in app */
+        background-color: #000;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        touch-action: manipulation; /* Improves touch response */
       }
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
+
+      /* Ultra-clean Scrollbar */
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
       }
-      ::-webkit-scrollbar-track {
-        background: #0f172a; 
+      .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
-      ::-webkit-scrollbar-thumb {
-        background: #334155; 
-        border-radius: 4px;
+
+      /* Custom Scrollbar for desktop feeling */
+      .custom-scroll::-webkit-scrollbar {
+        width: 6px;
+        height: 6px;
       }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #475569; 
+      .custom-scroll::-webkit-scrollbar-track {
+        background: rgba(255,255,255,0.05); 
+      }
+      .custom-scroll::-webkit-scrollbar-thumb {
+        background: rgba(255,255,255,0.2); 
+        border-radius: 10px;
+      }
+      .custom-scroll::-webkit-scrollbar-thumb:hover {
+        background: rgba(255,255,255,0.4); 
       }
     </style>
   <script type="importmap">
